--- a/readme.org
+++ b/readme.org
@@ -1,3 +1,13 @@
+* Mac usage instructions
+Setup:
+
+1. Install Homebrew
+2. Install git: `brew install git`
+3. Install clojure: `brew install clojure`
+
+Usage:
+
+- In the project directory, run `clj -m alphasample.main`.
 * Java Swing image representation
 Images are represented as RGBA in CSS: rgba(R, G, B, A). In Java Swing, there
 seems to be a hexadecimal encoding. Everything is encoded within an integer.
